--- a/Backend/OppMapMdzAPI/OppMapMdzAPI/OppMapMdzAPI.csproj
+++ b/Backend/OppMapMdzAPI/OppMapMdzAPI/OppMapMdzAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.22" />
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
