Add endpoint GetComerciosBuffer

--- a/Backend/OppMapMdzAPI/OppMapMdzAPI/appsettings.Development.json
+++ b/Backend/OppMapMdzAPI/OppMapMdzAPI/appsettings.Development.json
@@ -8,6 +8,12 @@
   "AllowedHosts": "*",
   "ArcGISServices": {
     "baseUrl": "https://webgis.ciudaddemendoza.gob.ar/server/rest/services/",
-    "zonificacionUsosSuelosLayer": "Zonificación_de_suelo_Ind_urbanos/FeatureServer/0"
+    "username": "cchavarini",
+    "password": "C4p1t4l.ide_2024",
+    "referer": "https://webgis.ciudaddemendoza.gob.ar/portal/",
+    "generateTokenUrl": "https://webgis.ciudaddemendoza.gob.ar/portal/sharing/rest/generateToken",
+    "zonificacionUsosSuelosLayer": "Zonificación_de_suelo_Ind_urbanos/FeatureServer/0",
+    "comercioLayer": "Comercio_publico/FeatureServer/0",
+    "bufferSrvUrl": "Utilities/Geometry/GeometryServer/buffer"
   }
 }
